# KittenTTSo

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
kittentts/: __index__.py  __init__.py  get_model.py  onnx_model.py
